Fix radio label was checking wrong owner list

--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/primary-contact/primary-contact.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/primary-contact/primary-contact.component.html
@@ -35,7 +35,7 @@
 
       <!-- Owner -->
       <div *ngIf="selectedThirdPartyAgent === false && parcelOwners.length > 0">
-        <label *ngIf="owners.length"
+        <label *ngIf="parcelOwners.length"
           >Select a Primary Contact from the listed land owners
           <ng-container *ngIf="hasCrownParcels">and government contacts</ng-container></label
         >
