--- a/portal-frontend/src/app/features/public/application/submission/naru-details/naru-details.component.html
+++ b/portal-frontend/src/app/features/public/application/submission/naru-details/naru-details.component.html
@@ -166,20 +166,10 @@
 
     <div class="subheading2 grid-1">Project Duration</div>
     <div class="grid-double">
-      <div *ngIf="applicationSubmission.soilProjectDurationAmount && applicationSubmission.soilProjectDurationUnit">
-        {{ applicationSubmission.soilProjectDurationAmount }}
-        <ng-container [ngPlural]="applicationSubmission.soilProjectDurationAmount">
-          <ng-template ngPluralCase="=1">
-            {{ applicationSubmission.soilProjectDurationUnit.slice(0, -1) | titlecase }}
-          </ng-template>
-          <ng-template ngPluralCase="other">
-            {{ applicationSubmission.soilProjectDurationUnit | titlecase }}
-          </ng-template>
-        </ng-container>
+      <div *ngIf="applicationSubmission.naruProjectDuration">
+        {{ applicationSubmission.naruProjectDuration }}
       </div>
-      <app-no-data
-        *ngIf="!applicationSubmission.soilProjectDurationAmount || !applicationSubmission.soilProjectDurationUnit"
-      ></app-no-data>
+      <app-no-data *ngIf="!applicationSubmission.naruProjectDuration"></app-no-data>
     </div>
 
     <div class="grid-1"></div>
@@ -201,17 +191,13 @@
     <div class="grid-double">
       {{ applicationSubmission.naruToPlaceMaximumDepth }}
       <span *ngIf="applicationSubmission.naruToPlaceMaximumDepth !== null">m</span>
-      <app-no-data
-        *ngIf="applicationSubmission.naruToPlaceMaximumDepth === null"
-      ></app-no-data>
+      <app-no-data *ngIf="applicationSubmission.naruToPlaceMaximumDepth === null"></app-no-data>
     </div>
     <div class="subheading2 grid-1">Average Depth</div>
     <div class="grid-double">
       {{ applicationSubmission.naruToPlaceAverageDepth }}
       <span *ngIf="applicationSubmission.naruToPlaceAverageDepth !== null">m</span>
-      <app-no-data
-        *ngIf="applicationSubmission.naruToPlaceAverageDepth === null"
-      ></app-no-data>
+      <app-no-data *ngIf="applicationSubmission.naruToPlaceAverageDepth === null"></app-no-data>
     </div>
   </ng-container>
 </div>
