--- a/portal-frontend/src/app/features/notice-of-intents/alcs-edit-submission/alcs-edit-submission.component.scss
+++ b/portal-frontend/src/app/features/notice-of-intents/alcs-edit-submission/alcs-edit-submission.component.scss
@@ -75,7 +75,7 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-row-gap: rem(24);
-    margin-bottom: rem(32);
+    margin-bottom: rem(16);
   }
 
   .mat-icon.mat-icon-inline {
@@ -194,11 +194,15 @@
     }
 
     .button-container {
+      position: sticky;
+      bottom: 0;
       margin-top: rem(40);
-      margin-bottom: rem(24);
+      background-color: colors.$white;
       display: flex;
+      padding: rem(16) 0;
       flex-direction: column-reverse;
       justify-content: space-between;
+      z-index: 2;
 
       @media screen and (min-width: $tabletBreakpoint) {
         flex-direction: row;
