--- a/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/parcel/parcel.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/parcel/parcel.component.html
@@ -5,7 +5,7 @@
       <h4>Parcel #{{ parcelInd + 1 }}</h4>
       <div>
         <button
-          *ngIf="showEdit"
+          *ngIf="showEdit && parcels.length > 1"
           class="mobile-hidden"
           mat-flat-button
           color="accent"
