--- a/portal-frontend/src/app/features/public/notice-of-intent/submission/additional-information/additional-information.component.html
+++ b/portal-frontend/src/app/features/public/notice-of-intent/submission/additional-information/additional-information.component.html
@@ -24,7 +24,7 @@
           <app-no-data *ngIf="!structure.type"></app-no-data>
         </div>
         <div class="grid-3">
-          {{ structure.area }}
+          {{ structure.area }} <span *ngIf="structure.area">m<sup>2</sup></span>
           <app-no-data *ngIf="!structure.area"></app-no-data>
         </div>
       </ng-container>
