--- a/alcs-frontend/src/app/features/notice-of-intent/applicant-info/notice-of-intent-details/pfrs-details/pfrs-details.component.html
+++ b/alcs-frontend/src/app/features/notice-of-intent/applicant-info/notice-of-intent-details/pfrs-details/pfrs-details.component.html
@@ -16,37 +16,21 @@
 
   <div class="subheading2 grid-1">Placement of Fill Project Duration</div>
   <div class="grid-double">
-    <div *ngIf="_noiSubmission.fillProjectDurationAmount && _noiSubmission.fillProjectDurationUnit">
-      {{ _noiSubmission.fillProjectDurationAmount }}
-      <ng-container [ngPlural]="_noiSubmission.fillProjectDurationAmount">
-        <ng-template ngPluralCase="=1">
-          {{ _noiSubmission.fillProjectDurationUnit.slice(0, -1) | titlecase }}
-        </ng-template>
-        <ng-template ngPluralCase="other">
-          {{ _noiSubmission.fillProjectDurationUnit | titlecase }}
-        </ng-template>
-      </ng-container>
+    <div *ngIf="_noiSubmission.fillProjectDuration">
+      {{ _noiSubmission.fillProjectDuration }}
     </div>
     <app-no-data
-      *ngIf="!_noiSubmission.fillProjectDurationAmount || !_noiSubmission.fillProjectDurationUnit"
+      *ngIf="!_noiSubmission.fillProjectDuration"
     ></app-no-data>
   </div>
 
   <div class="subheading2 grid-1">Removal of Soil Project Duration</div>
   <div class="grid-double">
-    <div *ngIf="_noiSubmission.soilProjectDurationAmount && _noiSubmission.soilProjectDurationUnit">
-      {{ _noiSubmission.soilProjectDurationAmount }}
-      <ng-container [ngPlural]="_noiSubmission.soilProjectDurationAmount">
-        <ng-template ngPluralCase="=1">
-          {{ _noiSubmission.soilProjectDurationUnit.slice(0, -1) | titlecase }}
-        </ng-template>
-        <ng-template ngPluralCase="other">
-          {{ _noiSubmission.soilProjectDurationUnit | titlecase }}
-        </ng-template>
-      </ng-container>
+    <div *ngIf="_noiSubmission.soilProjectDuration">
+      {{ _noiSubmission.soilProjectDuration }}
     </div>
     <app-no-data
-      *ngIf="!_noiSubmission.soilProjectDurationAmount || !_noiSubmission.soilProjectDurationUnit"
+      *ngIf="!_noiSubmission.soilProjectDuration"
     ></app-no-data>
   </div>
 
