--- a/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/pofo-details/pofo-details.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/pofo-details/pofo-details.component.html
@@ -27,22 +27,19 @@
     <app-no-data [showRequired]="showErrors" *ngIf="!_noiSubmission.soilFillTypeToPlace"></app-no-data>
   </div>
 
-  <div class="subheading2 grid-1">Project Duration</div>
+  <div class="subheading2 grid-1">Placement of Fill Project Duration</div>
   <div class="grid-double">
-    <div *ngIf="_noiSubmission.soilProjectDurationAmount && _noiSubmission.soilProjectDurationUnit">
-      {{ _noiSubmission.soilProjectDurationAmount }}
-      <ng-container [ngPlural]="_noiSubmission.soilProjectDurationAmount">
-        <ng-template ngPluralCase="=1">
-          {{ _noiSubmission.soilProjectDurationUnit.slice(0, -1) | titlecase }}
-        </ng-template>
-        <ng-template ngPluralCase="other">
-          {{ _noiSubmission.soilProjectDurationUnit | titlecase }}
+    <div *ngIf="_noiSubmission.soilProjectDuration">
+      {{ _noiSubmission.soilProjectDuration }}
+      <ng-container>
+        <ng-template>
+          {{ _noiSubmission.soilProjectDuration | titlecase }}
         </ng-template>
       </ng-container>
     </div>
     <app-no-data
       [showRequired]="showErrors"
-      *ngIf="!_noiSubmission.soilProjectDurationAmount || !_noiSubmission.soilProjectDurationUnit"
+      *ngIf="!_noiSubmission.soilProjectDuration"
     ></app-no-data>
   </div>
 
