--- a/portal-frontend/src/app/features/public/notice-of-intent/submission/pfrs-details/pfrs-details.component.html
+++ b/portal-frontend/src/app/features/public/notice-of-intent/submission/pfrs-details/pfrs-details.component.html
@@ -35,37 +35,21 @@
 
   <div class="subheading2 grid-1">Placement of Fill Project Duration</div>
   <div class="grid-double">
-    <div *ngIf="noiSubmission.fillProjectDurationAmount && noiSubmission.fillProjectDurationAmount">
-      {{ noiSubmission.fillProjectDurationAmount }}
-      <ng-container [ngPlural]="noiSubmission.fillProjectDurationAmount">
-        <ng-template ngPluralCase="=1">
-          {{ noiSubmission.fillProjectDurationUnit?.slice(0, -1) | titlecase }}
-        </ng-template>
-        <ng-template ngPluralCase="other">
-          {{ noiSubmission.fillProjectDurationUnit | titlecase }}
-        </ng-template>
-      </ng-container>
+    <div *ngIf="noiSubmission.fillProjectDuration">
+      {{ noiSubmission.fillProjectDuration }}
     </div>
     <app-no-data
-      *ngIf="!noiSubmission.fillProjectDurationAmount || !noiSubmission.fillProjectDurationUnit"
+      *ngIf="!noiSubmission.fillProjectDuration"
     ></app-no-data>
   </div>
 
-  <div class="subheading2 grid-1">Removal of Fill Project Duration</div>
+  <div class="subheading2 grid-1">Removal of Soil Project Duration</div>
   <div class="grid-double">
-    <div *ngIf="noiSubmission.soilProjectDurationAmount && noiSubmission.soilProjectDurationAmount">
-      {{ noiSubmission.soilProjectDurationAmount }}
-      <ng-container [ngPlural]="noiSubmission.soilProjectDurationAmount">
-        <ng-template ngPluralCase="=1">
-          {{ noiSubmission.soilProjectDurationUnit?.slice(0, -1) | titlecase }}
-        </ng-template>
-        <ng-template ngPluralCase="other">
-          {{ noiSubmission.soilProjectDurationUnit | titlecase }}
-        </ng-template>
-      </ng-container>
+    <div *ngIf="noiSubmission.soilProjectDuration">
+      {{ noiSubmission.soilProjectDuration }}
     </div>
     <app-no-data
-      *ngIf="!noiSubmission.soilProjectDurationAmount || !noiSubmission.soilProjectDurationUnit"
+      *ngIf="!noiSubmission.soilProjectDuration"
     ></app-no-data>
   </div>
 
