--- a/portal-frontend/src/app/features/public/notice-of-intent/submission/roso-details/roso-details.component.html
+++ b/portal-frontend/src/app/features/public/notice-of-intent/submission/roso-details/roso-details.component.html
@@ -27,21 +27,13 @@
     <app-no-data *ngIf="!noiSubmission.soilTypeRemoved"></app-no-data>
   </div>
 
-  <div class="subheading2 grid-1">Project Duration</div>
+  <div class="subheading2 grid-1">Removal of Soil Project Duration</div>
   <div class="grid-double">
-    <div *ngIf="noiSubmission.soilProjectDurationAmount && noiSubmission.soilProjectDurationUnit">
-      {{ noiSubmission.soilProjectDurationAmount }}
-      <ng-container [ngPlural]="noiSubmission.soilProjectDurationAmount">
-        <ng-template ngPluralCase="=1">
-          {{ noiSubmission.soilProjectDurationUnit.slice(0, -1) | titlecase }}
-        </ng-template>
-        <ng-template ngPluralCase="other">
-          {{ noiSubmission.soilProjectDurationUnit | titlecase }}
-        </ng-template>
-      </ng-container>
+    <div *ngIf="noiSubmission.soilProjectDuration">
+      {{ noiSubmission.soilProjectDuration }}
     </div>
     <app-no-data
-      *ngIf="!noiSubmission.soilProjectDurationAmount || !noiSubmission.soilProjectDurationUnit"
+      *ngIf="!noiSubmission.soilProjectDuration"
     ></app-no-data>
   </div>
 
