Update nfu project duration to single line input

--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/nfu-details/nfu-details.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/nfu-details/nfu-details.component.html
@@ -7,9 +7,7 @@
   <div class="grid-double">
     {{ applicationSubmission.purpose }}
   </div>
-  <div class="subheading2 grid-1">
-    Could this proposal be accommodated on lands outside of the ALR?
-  </div>
+  <div class="subheading2 grid-1">Could this proposal be accommodated on lands outside of the ALR?</div>
   <div class="grid-double">
     {{ applicationSubmission.nfuOutsideLands }}
   </div>
@@ -49,6 +47,11 @@
       {{ applicationSubmission.nfuFillOriginDescription }}
     </div>
 
+    <div class="subheading2 grid-1">Project Duration</div>
+    <div class="grid-double">
+      {{ applicationSubmission.nfuProjectDuration }}
+    </div>
+
     <div class="subheading1 full-width">Fill to be Placed</div>
     <div class="full-width soil-table">
       <div class="grid-1"><strong>Volume</strong></div>
@@ -59,18 +62,6 @@
       <div class="grid-2">{{ applicationSubmission.nfuMaxFillDepth }} m</div>
       <div class="grid-1"><strong>Average Depth</strong></div>
       <div class="grid-2">{{ applicationSubmission.nfuAverageFillDepth }} m</div>
-    </div>
-
-    <div class="full-width">
-      <span class="subheading1">Project Duration</span>
-    </div>
-    <div class="subheading2 grid-1">Duration</div>
-    <div class="grid-double">
-      {{ applicationSubmission.nfuProjectDurationUnit }}
-    </div>
-    <div class="subheading2 grid-1">Length</div>
-    <div class="grid-double">
-      {{ applicationSubmission.nfuProjectDurationAmount }}
     </div>
   </ng-container>
 </div>
