--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/proposal/roso/roso-proposal.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/proposal/roso/roso-proposal.component.html
@@ -132,7 +132,7 @@
 
     <div class="form-row">
       <div class="full-row">
-        <label for="projectDuration">Placement of Fill Project Duration</label>
+        <label for="projectDuration">Removal of Soil Project Duration</label>
         <div class="subtext">Length of time you anticipate it would take to complete the project</div>
         <mat-form-field appearance="outline">
           <input
