Update naru and nfu labels

--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/naru-details/naru-details.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/naru-details/naru-details.component.html
@@ -126,7 +126,7 @@
       {{ _applicationSubmission.naruFillOrigin }}
     </div>
 
-    <div class="subheading2 grid-1">Fill Project Duration</div>
+    <div class="subheading2 grid-1">Placement of Fill Project Duration</div>
     <div class="grid-double">
       {{ _applicationSubmission.naruProjectDuration }}
     </div>
