--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/nfu-details/nfu-details.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/nfu-details/nfu-details.component.html
@@ -47,7 +47,7 @@
       {{ applicationSubmission.nfuFillOriginDescription }}
     </div>
 
-    <div class="subheading2 grid-1">Project Duration</div>
+    <div class="subheading2 grid-1">Placement of Fill Project Duration</div>
     <div class="grid-double">
       {{ applicationSubmission.nfuProjectDuration }}
     </div>
