--- a/portal-frontend/src/app/features/applications/application-details/nfu-details/nfu-details.component.html
+++ b/portal-frontend/src/app/features/applications/application-details/nfu-details/nfu-details.component.html
@@ -53,7 +53,7 @@
       <app-no-data [showRequired]="showErrors" *ngIf="!applicationSubmission.nfuFillOriginDescription"></app-no-data>
     </div>
 
-    <div class="subheading2 grid-1">Fill Project Duration</div>
+    <div class="subheading2 grid-1">Placement of Fill Project Duration</div>
     <div class="grid-double">
       <div *ngIf="applicationSubmission.nfuProjectDuration">{{ applicationSubmission.nfuProjectDuration }}</div>
       <app-no-data [showRequired]="showErrors" *ngIf="!applicationSubmission.nfuProjectDuration"></app-no-data>
