--- a/portal-frontend/src/app/features/applications/edit-submission/proposal/nfu-proposal/nfu-proposal.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/proposal/nfu-proposal/nfu-proposal.component.html
@@ -195,7 +195,7 @@
 
     <div class="form-row">
       <div class="full-row">
-        <label for="projectDuration">Fill Project Duration</label>
+        <label for="projectDuration">Placement of Fill Project Duration</label>
         <div class="subtext">Length of time you anticipate it would take to complete the project</div>
         <mat-form-field appearance="outline">
           <input id="projectDuration" matInput formControlName="projectDuration" placeholder="Type project duration" />
