--- a/portal-frontend/src/app/features/applications/application-details/naru-details/naru-details.component.html
+++ b/portal-frontend/src/app/features/applications/application-details/naru-details/naru-details.component.html
@@ -164,7 +164,7 @@
       <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.naruFillOrigin"></app-no-data>
     </div>
 
-    <div class="subheading2 grid-1">Fill Project Duration</div>
+    <div class="subheading2 grid-1">Placement of Fill Project Duration</div>
     <div class="grid-double">
       <div *ngIf="_applicationSubmission.naruProjectDuration">{{ _applicationSubmission.naruProjectDuration }}</div>
       <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.naruProjectDuration"></app-no-data>
