--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/pfrs-details/pfrs-details.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/pfrs-details/pfrs-details.component.html
@@ -34,20 +34,8 @@
 
   <div class="subheading2 grid-1">Remove of Soil Project Duration</div>
   <div class="grid-double">
-    <div *ngIf="_applicationSubmission.soilProjectDurationAmount && _applicationSubmission.soilProjectDurationUnit">
-      {{ _applicationSubmission.soilProjectDurationAmount }}
-      <ng-container [ngPlural]="_applicationSubmission.soilProjectDurationAmount">
-        <ng-template ngPluralCase="=1">
-          {{ _applicationSubmission.soilProjectDurationUnit.slice(0, -1) | titlecase }}
-        </ng-template>
-        <ng-template ngPluralCase="other">
-          {{ _applicationSubmission.soilProjectDurationUnit | titlecase }}
-        </ng-template>
-      </ng-container>
-    </div>
-    <app-no-data
-      *ngIf="!_applicationSubmission.soilProjectDurationAmount || !_applicationSubmission.soilProjectDurationUnit"
-    ></app-no-data>
+    {{ _applicationSubmission.soilProjectDuration }}
+    <app-no-data *ngIf="!_applicationSubmission.soilProjectDuration"></app-no-data>
   </div>
 
   <div class="full-width soil-table">
