--- a/portal-frontend/src/app/features/public/application/submission/pfrs-details/pfrs-details.component.html
+++ b/portal-frontend/src/app/features/public/application/submission/pfrs-details/pfrs-details.component.html
@@ -41,20 +41,10 @@
 
   <div class="subheading2 grid-1">Removal of Soil Project Duration</div>
   <div class="grid-double">
-    <div *ngIf="applicationSubmission.soilProjectDurationAmount && applicationSubmission.soilProjectDurationUnit">
-      {{ applicationSubmission.soilProjectDurationAmount }}
-      <ng-container [ngPlural]="applicationSubmission.soilProjectDurationAmount">
-        <ng-template ngPluralCase="=1">
-          {{ applicationSubmission.soilProjectDurationUnit.slice(0, -1) | titlecase }}
-        </ng-template>
-        <ng-template ngPluralCase="other">
-          {{ applicationSubmission.soilProjectDurationUnit | titlecase }}
-        </ng-template>
-      </ng-container>
+    <div *ngIf="applicationSubmission.soilProjectDuration">
+      {{ applicationSubmission.soilProjectDuration }}
     </div>
-    <app-no-data
-      *ngIf="!applicationSubmission.soilProjectDurationAmount || !applicationSubmission.soilProjectDurationUnit"
-    ></app-no-data>
+    <app-no-data *ngIf="!applicationSubmission.soilProjectDuration"></app-no-data>
   </div>
 
   <div class="full-width soil-table">
@@ -90,32 +80,24 @@
     <div>
       {{ applicationSubmission.soilToRemoveMaximumDepth }}
       <span *ngIf="applicationSubmission.soilToRemoveMaximumDepth !== null">m</span>
-      <app-no-data
-        *ngIf="applicationSubmission.soilToRemoveMaximumDepth === null"
-      ></app-no-data>
+      <app-no-data *ngIf="applicationSubmission.soilToRemoveMaximumDepth === null"></app-no-data>
     </div>
     <div>
       {{ applicationSubmission.soilToPlaceMaximumDepth }}
       <span *ngIf="applicationSubmission.soilToPlaceMaximumDepth !== null">m</span>
-      <app-no-data
-        *ngIf="applicationSubmission.soilToPlaceMaximumDepth === null"
-      ></app-no-data>
+      <app-no-data *ngIf="applicationSubmission.soilToPlaceMaximumDepth === null"></app-no-data>
     </div>
 
     <div class="subheading2">Average Depth</div>
     <div>
       {{ applicationSubmission.soilToRemoveAverageDepth }}
       <span *ngIf="applicationSubmission.soilToRemoveAverageDepth !== null">m</span>
-      <app-no-data
-        *ngIf="applicationSubmission.soilToRemoveAverageDepth === null"
-      ></app-no-data>
+      <app-no-data *ngIf="applicationSubmission.soilToRemoveAverageDepth === null"></app-no-data>
     </div>
     <div>
       {{ applicationSubmission.soilToPlaceAverageDepth }}
       <span *ngIf="applicationSubmission.soilToPlaceAverageDepth !== null">m</span>
-      <app-no-data
-        *ngIf="applicationSubmission.soilToPlaceAverageDepth === null"
-      ></app-no-data>
+      <app-no-data *ngIf="applicationSubmission.soilToPlaceAverageDepth === null"></app-no-data>
     </div>
 
     <div class="spacer-row"></div>
@@ -128,64 +110,48 @@
     <div>
       {{ applicationSubmission.soilAlreadyRemovedVolume }}
       <span *ngIf="applicationSubmission.soilAlreadyRemovedVolume !== null">m<sup>3</sup></span>
-      <app-no-data
-        *ngIf="applicationSubmission.soilAlreadyRemovedVolume === null"
-      ></app-no-data>
+      <app-no-data *ngIf="applicationSubmission.soilAlreadyRemovedVolume === null"></app-no-data>
     </div>
     <div>
       {{ applicationSubmission.soilAlreadyPlacedVolume }}
       <span *ngIf="applicationSubmission.soilAlreadyPlacedVolume !== null">m<sup>3</sup></span>
-      <app-no-data
-        *ngIf="applicationSubmission.soilAlreadyPlacedVolume === null"
-      ></app-no-data>
+      <app-no-data *ngIf="applicationSubmission.soilAlreadyPlacedVolume === null"></app-no-data>
     </div>
 
     <div class="subheading2">Area</div>
     <div>
       {{ applicationSubmission.soilAlreadyRemovedArea }}
       <span *ngIf="applicationSubmission.soilAlreadyRemovedArea !== null">m<sup>2</sup></span>
-      <app-no-data
-        *ngIf="applicationSubmission.soilAlreadyRemovedArea === null"
-      ></app-no-data>
+      <app-no-data *ngIf="applicationSubmission.soilAlreadyRemovedArea === null"></app-no-data>
     </div>
     <div>
       {{ applicationSubmission.soilAlreadyPlacedArea }}
       <span *ngIf="applicationSubmission.soilAlreadyPlacedArea !== null">m<sup>2</sup></span>
-      <app-no-data
-        *ngIf="applicationSubmission.soilAlreadyPlacedArea === null"
-      ></app-no-data>
+      <app-no-data *ngIf="applicationSubmission.soilAlreadyPlacedArea === null"></app-no-data>
     </div>
 
     <div class="subheading2">Maximum Depth</div>
     <div>
       {{ applicationSubmission.soilAlreadyRemovedMaximumDepth }}
       <span *ngIf="applicationSubmission.soilAlreadyRemovedMaximumDepth !== null">m</span>
-      <app-no-data
-        *ngIf="applicationSubmission.soilAlreadyRemovedMaximumDepth === null"
-      ></app-no-data>
+      <app-no-data *ngIf="applicationSubmission.soilAlreadyRemovedMaximumDepth === null"></app-no-data>
     </div>
     <div>
       {{ applicationSubmission.soilAlreadyPlacedMaximumDepth }}
       <span *ngIf="applicationSubmission.soilAlreadyPlacedMaximumDepth !== null">m</span>
-      <app-no-data
-        *ngIf="applicationSubmission.soilAlreadyPlacedMaximumDepth === null"
-      ></app-no-data>
+      <app-no-data *ngIf="applicationSubmission.soilAlreadyPlacedMaximumDepth === null"></app-no-data>
     </div>
 
     <div class="subheading2">Average Depth</div>
     <div>
       {{ applicationSubmission.soilAlreadyRemovedAverageDepth }}
       <span *ngIf="applicationSubmission.soilAlreadyRemovedAverageDepth !== null">m</span>
-      <app-no-data
-        *ngIf="applicationSubmission.soilAlreadyRemovedAverageDepth === null"
-      ></app-no-data>
+      <app-no-data *ngIf="applicationSubmission.soilAlreadyRemovedAverageDepth === null"></app-no-data>
     </div>
     <div>
       {{ applicationSubmission.soilAlreadyPlacedAverageDepth }}
       <span *ngIf="applicationSubmission.soilAlreadyPlacedAverageDepth !== null">m</span>
-      <app-no-data
-        *ngIf="applicationSubmission.soilAlreadyPlacedAverageDepth === null"
-      ></app-no-data>
+      <app-no-data *ngIf="applicationSubmission.soilAlreadyPlacedAverageDepth === null"></app-no-data>
     </div>
   </div>
 
