--- a/portal-frontend/src/app/features/public/application/submission/roso-details/roso-details.component.html
+++ b/portal-frontend/src/app/features/public/application/submission/roso-details/roso-details.component.html
@@ -21,24 +21,14 @@
     <app-no-data *ngIf="!applicationSubmission.purpose"></app-no-data>
   </div>
 
-  <div class="subheading2 grid-1">Project Duration</div>
+  <div class="subheading2 grid-1">Removal of Soil Project Duration</div>
   <div class="grid-double">
-    <div *ngIf="applicationSubmission.soilProjectDurationAmount && applicationSubmission.soilProjectDurationUnit">
-      {{ applicationSubmission.soilProjectDurationAmount }}
-      <ng-container [ngPlural]="applicationSubmission.soilProjectDurationAmount">
-        <ng-template ngPluralCase="=1">
-          {{ applicationSubmission.soilProjectDurationUnit.slice(0, -1) | titlecase }}
-        </ng-template>
-        <ng-template ngPluralCase="other">
-          {{ applicationSubmission.soilProjectDurationUnit | titlecase }}
-        </ng-template>
-      </ng-container>
+    <div *ngIf="applicationSubmission.soilProjectDuration">
+      {{ applicationSubmission.soilProjectDuration }}
     </div>
-    <app-no-data
-      *ngIf="!applicationSubmission.soilProjectDurationAmount || !applicationSubmission.soilProjectDurationUnit"
-    ></app-no-data>
+    <app-no-data *ngIf="!applicationSubmission.soilProjectDuration"></app-no-data>
   </div>
-  
+
   <div class="grid-1"></div>
   <div class="subheading2 grid-double">Soil to be Removed</div>
 
@@ -76,40 +66,28 @@
   <div class="grid-double">
     {{ applicationSubmission.soilAlreadyRemovedVolume }}
     <span *ngIf="applicationSubmission.soilAlreadyRemovedVolume !== null">m<sup>3</sup></span>
-    <app-no-data
-     
-      *ngIf="applicationSubmission.soilAlreadyRemovedVolume === null"
-    ></app-no-data>
+    <app-no-data *ngIf="applicationSubmission.soilAlreadyRemovedVolume === null"></app-no-data>
   </div>
 
   <div class="subheading2 grid-1">Area</div>
   <div class="grid-double">
     {{ applicationSubmission.soilAlreadyRemovedArea }}
     <span *ngIf="applicationSubmission.soilAlreadyRemovedArea !== null">ha</span>
-    <app-no-data
-     
-      *ngIf="applicationSubmission.soilAlreadyRemovedArea === null"
-    ></app-no-data>
+    <app-no-data *ngIf="applicationSubmission.soilAlreadyRemovedArea === null"></app-no-data>
   </div>
 
   <div class="subheading2 grid-1">Maximum Depth</div>
   <div class="grid-double">
     {{ applicationSubmission.soilAlreadyRemovedMaximumDepth }}
     <span *ngIf="applicationSubmission.soilAlreadyRemovedMaximumDepth !== null">m</span>
-    <app-no-data
-     
-      *ngIf="applicationSubmission.soilAlreadyRemovedMaximumDepth === null"
-    ></app-no-data>
+    <app-no-data *ngIf="applicationSubmission.soilAlreadyRemovedMaximumDepth === null"></app-no-data>
   </div>
 
   <div class="subheading2 grid-1">Average Depth</div>
   <div class="grid-double">
     {{ applicationSubmission.soilAlreadyRemovedAverageDepth }}
     <span *ngIf="applicationSubmission.soilAlreadyRemovedAverageDepth !== null">m</span>
-    <app-no-data
-     
-      *ngIf="applicationSubmission.soilAlreadyRemovedAverageDepth === null"
-    ></app-no-data>
+    <app-no-data *ngIf="applicationSubmission.soilAlreadyRemovedAverageDepth === null"></app-no-data>
   </div>
 
   <div class="subheading2 grid-1">Describe the type of soil proposed to be removed.</div>
