--- a/portal-frontend/src/app/features/public/application/submission/pfrs-details/pfrs-details.component.html
+++ b/portal-frontend/src/app/features/public/application/submission/pfrs-details/pfrs-details.component.html
@@ -23,20 +23,10 @@
 
   <div class="subheading2 grid-1">Placement of Fill Project Duration</div>
   <div class="grid-double">
-    <div *ngIf="applicationSubmission.fillProjectDurationAmount && applicationSubmission.fillProjectDurationUnit">
-      {{ applicationSubmission.fillProjectDurationAmount }}
-      <ng-container [ngPlural]="applicationSubmission.fillProjectDurationAmount">
-        <ng-template ngPluralCase="=1">
-          {{ applicationSubmission.fillProjectDurationUnit.slice(0, -1) | titlecase }}
-        </ng-template>
-        <ng-template ngPluralCase="other">
-          {{ applicationSubmission.fillProjectDurationUnit | titlecase }}
-        </ng-template>
-      </ng-container>
+    <div *ngIf="applicationSubmission.fillProjectDuration">
+      {{ applicationSubmission.fillProjectDuration }}
     </div>
-    <app-no-data
-      *ngIf="!applicationSubmission.fillProjectDurationAmount || !applicationSubmission.fillProjectDurationUnit"
-    ></app-no-data>
+    <app-no-data *ngIf="!applicationSubmission.fillProjectDuration"></app-no-data>
   </div>
 
   <div class="subheading2 grid-1">Removal of Soil Project Duration</div>
