Add link to proof of serving notice template

--- a/portal-frontend/src/app/features/applications/edit-submission/proposal/tur-proposal/tur-proposal.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/proposal/tur-proposal/tur-proposal.component.html
@@ -165,6 +165,7 @@
   <div class="section">
     <mat-label class="subheading2" for="proof-of-serving">Proof of Serving Notice</mat-label>
     <div class="subtext">Proof that all affected property owners with land in the ALR were notified as required.</div>
+    <div class="subtext template-link-container">Visit the <a href="">FIXME:ALC website</a> for more information</div>
     <app-file-drag-drop
       id="proof-of-serving"
       [uploadedFiles]="servingNotice"
