--- a/portal-frontend/src/app/features/applications/edit-submission/proposal/tur-proposal/tur-proposal.component.scss
+++ b/portal-frontend/src/app/features/applications/edit-submission/proposal/tur-proposal/tur-proposal.component.scss
@@ -1,4 +1,5 @@
 @use '../../../../../../styles/functions' as *;
+@use '../../../../../../styles/colors';
 
 section {
   margin-top: rem(36);
@@ -6,4 +7,8 @@ section {
 
 .affected-area {
   margin-top: rem(36);
+}
+
+.template-link-container {
+  background-color: colors.$secondary-color-light;
 }
