Change/add label/sublabel for proposal map field

--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/tur-details/tur-details.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/tur-details/tur-details.component.html
@@ -30,7 +30,7 @@
       {{ notice.fileName }}
     </a>
   </div>
-  <div class="subheading2 grid-1">Proposal Map / Sketch Plan</div>
+  <div class="subheading2 grid-1">Proposal Map / Site Plan</div>
   <div class="grid-double">
     <a *ngFor="let file of proposalMap" (click)="openFile(file)">
       {{ file.fileName }}
