--- a/portal-frontend/src/app/features/applications/edit-submission/proposal/tur-proposal/tur-proposal.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/proposal/tur-proposal/tur-proposal.component.html
@@ -178,7 +178,8 @@
     ></app-file-drag-drop>
   </div>
   <div class="section">
-    <mat-label class="subheading2" for="proposal-map">Proposal Map / Sketch Plan</mat-label>
+    <mat-label class="subheading2" for="proposal-map">Proposal Map / Site Plan</mat-label>
+    <div class="subtext">A visual representation of your proposal.</div>
     <app-file-drag-drop
       id="proposal-map"
       [uploadedFiles]="proposalMap"
