--- a/portal-frontend/src/app/features/public/application/submission/tur-details/tur-details.component.html
+++ b/portal-frontend/src/app/features/public/application/submission/tur-details/tur-details.component.html
@@ -31,7 +31,7 @@
     }}</span>
     <app-no-data *ngIf="applicationSubmission.turTotalCorridorArea === null"></app-no-data>
   </div>
-  <div class="subheading2 grid-1">Proposal Map / Sketch Plan</div>
+  <div class="subheading2 grid-1">Proposal Map / Site Plan</div>
   <div class="grid-double">
     <a *ngFor="let file of proposalMap" (click)="openFile(file.uuid)">
       {{ file.fileName }}
